# flowstile

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
docs/: ad-hoc-tasks.md  chat-tasks.md  competitive-landscape.md  design-decisions.md  developer-guide.md  index.md  kuflow-comparison.md  openapi.yaml  process-authoring-guide.md  runtime-contract.md  self-hosting.md  ui-direction.md
docs/reviews/: attachments-review.md
e2e/: attachments.spec.ts  case-overview.spec.ts  chat-task.spec.ts  expense-approval.spec.ts  form-designer.spec.ts  form-outcomes.spec.ts  global-setup.ts  loan-origination.spec.ts  order-fulfillment.spec.ts  purchase-requisition.spec.ts  smoke.spec.ts  task-detail.spec.ts  task-workflow.spec.ts  vacation-leave.spec.ts  visibility-scope.spec.ts
e2e/helpers/: check-workflow.ts  pr-workflow-result.ts  start-workflow.ts
sdk-python/: .gitignore  README.md  pyproject.toml
sdk-python/examples/: loan_approval_worker.py
sdk-python/src/flowstile/: __init__.py  activities.py  agent.py  client.py  codegen.py  errors.py  mapping.py  preflight.py  types.py  worker.py  workflows.py
sdk-python/tests/: test_agent.py  test_client.py  test_codegen.py  test_mapping.py  test_preflight.py
sdk-python/tests/integration/: _helpers.py  approval_workflow.py  test_e2e_agent_step.py  test_e2e_approval.py  test_e2e_codegen.py  test_e2e_context_from.py  test_e2e_lifecycle.py  test_e2e_preflight.py  test_e2e_typed_output.py
(+17 files in other folders)
