[project]
name = "flowstile"
version = "0.0.1"
description = "Python SDK for Flowstile — a human-task inbox and form layer for Temporal.io workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "The Flowstile Authors" }]
keywords = ["temporal", "workflow", "human-task", "bpm", "flowstile"]
dependencies = [
    "temporalio>=1.7",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowstile"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
packages = ["flowstile"]
mypy_path = "src"
strict = false
